--- a/src/assets/scss/font.scss
+++ b/src/assets/scss/font.scss
@@ -11,7 +11,8 @@ a,
 p,
 ul,
 li,
-span {
+span,
+div {
   line-height: 1;
   font-family: Noto Sans TC, Din, Microsoft JhengHei, Avenir, Helvetica, Arial, sans-serif;
   font-weight: 400;
